# githooklib

./: .githooklib.yaml  .gitignore  CHANGELOG.md  ENHANCEMENTS.md  FINAL_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PUSH_TO_GITHUB.md  README.md  VERIFICATION_CHECKLIST.md  publish.py  pyproject.toml  requirements.txt
.cursor/rules/: how-to-develop-code.md
githooklib/: __init__.py  __main__.py  api.py  cli.py  command.py  exceptions.py  git_hook.py  protocols.py  version.py
githooklib/cache/: __init__.py  file_hash_cache.py
githooklib/chain/: __init__.py  chain_result.py  hook_chain.py  hook_step.py
githooklib/config/: __init__.py  config_loader.py  config_schema.py
githooklib/examples/: __init__.py  commit_msg_conventional.py  pre_commit_flake8.py  pre_commit_isort.py  pre_commit_pytest.py  pre_push_coverage.py
githooklib/execution/: __init__.py  parallel_executor.py
githooklib/gateways/: project_root_gateway.py
githooklib/notifications/: __init__.py  notification_service.py
githooklib/notifications/providers/: __init__.py  base_notifier.py  desktop_notifier.py  (+3 more)
githooklib/ui/: __init__.py  console.py  formatters.py
githooklib/utils/: __init__.py  command_result_factory.py
githooks/: pre_commit_black.py  pre_push.py
githooks/steps/: run_mypy_type_check.py
tests/: base_test_case.py
tests/e2e/: test_pre_commit.py  test_wsl_pytest.py
tests/performance/: test_parallel_execution.py
tests/ut/: test___main__.py  test_api.py  test_cli.py  test_command.py  test_context.py  test_cross_platform.py  test_fire_mock.py  test_logger.py
(+19 files in other folders)
