[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "githooklib"
version = "1.0.2"
authors = [
    { name = "Noamshabat1", email = "contactnoamshabat@gmail.com" },
]
dependencies = ['fire', 'tqdm', 'colorama', 'pyyaml', 'rich']
keywords = []
license = { "file" = "./LICENSE" }
description = "A Python framework (and CLI) for creating, managing, and installing Git hooks with python"
readme = {file = "./README.md", content-type = "text/markdown"}
requires-python = ">=3.8.0"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: OS Independent"
]
[project.scripts]
    githooklib = "githooklib.__main__:main"
    githooks = "githooklib.__main__:main"

[tool.setuptools]
packages = ["githooklib"]

[tool.setuptools.package-data]
"githooklib" = ["py.typed"]

[project.urls]
"Homepage" = "https://github.com/Noamshabat1/githooklib"
"Bug Tracker" = "https://github.com/Noamshabat1/githooklib/issues"
